# place_recognizer

./: .gitignore  AnalyzeResult.ipynb  CMakeLists.txt  HOWTO.md  README.md  ServiceTest.ipynb  ServiceTest.py  package.xml  pytest.ipynb
docs/: diagrams.xmi
examples/: query_from_bag.py  train_from_bag.py
include/: BKMeans.h  BOWKmajorityTrainer.h  IncrementalBoW.h  KMedians.h  KMedoids.h  Segmentation.h  VLAD.h  Vectors.h  kdtree.hpp  pam.h
lib/: BKMeans.cpp  BOWKmajorityTrainer.cpp  IncrementalBoW.cpp  KMedians.cpp  KMedoids.cpp  KMedoids.h  Segmentation.cpp  VLAD.cpp  kdtree.cpp  kdtree.hpp  pam.cpp
nodes/: bkmeans_test.cpp  ibow_mapper.cpp  recognizer_srv.cpp  test_recognizer_srv.py
python/: CMakeLists.txt  GenericImageMap.py  GenericTrainer.py  GeographicCoordinate.py  ImageBagWithPose.py  ImageSubscriber.py  KMedoids.py  MiscProcess.py  OxfordDataset.py  OxfordDatasetViewer.py  Segmentation.py  SegmentationWrapper.py  VLAD.py  VLAD.pyx  __init__.py  _place_recognizer.pyx  binding.cpp  binding2.cpp  conversion.cpp  conversion.h  cv_conversion.cpp  fstream_conversion.h  iBoW.pxd  iBoW.pyx
python/examples/: cityscape-cluster-centers.dat.npy  cityscape_dict.py  pose_from_utm.py  query_from_bag.py  server  server.py  train_from_bag.py  train_from_ros.py
python/pyfilestream/: LICENSE.txt  pystreambuf.h
pythonz/: CMakeLists.txt  VLAD.py  binding.cpp  conversion.cpp  conversion.h
pythonz/examples/: cityscape_dict.py  query_from_bag.py  train_from_bag.py
scripts/: collect_descriptors.py
srv/: place_recognizer.srv
